test_suite5/ALAN/test_suite/alan-2022-examples/failing/006780_mutation.alan
source b begin leave true(end
